@@ -1,10 +1,15 @@
 MIRROR=mirror
 MIRROR_PATH=`pwd`
-SOURCE_REPO=http://pyrtf-ng.googlecode.com/svn
+SOURCE_REPO='http://pyrtf-ng.googlecode.com/svn'
 DUMP=svndump
-#SF_USER=oubiwann
-SF_USER=oubiwann-dep
-SF_GROUP=p/py
-#SF_PROJECT=pyrtf
-SF_PROJECT=pykon
-SF_ID=134548
+SF_GROUP='p/py'
+SF_USER=oubiwann
+SF_PROJECT=pyrtf
+SF_ID=115205
+# testing values
+#SF_PROJECT=pykon
+#SF_USER='oubiwann-dep'
+#SF_ID=134548
+# time vars
+MIN_DAYS=7
+PICKLE_FILE="${MIRROR}/lastSync.pickle"
